# email_prefix

./: README.md  assignment2.md  assignment2_stackholder.txt  pyproject.toml  requirements.txt
core/domain/: base.py  entities.py  enums.py  strategies.py
core/interfaces/: repository.py
core/use_cases/: analytics.py  management.py  tracking.py
runner/: database.py  dtos.py  main.py
tests/: test_habits.py
